Java 1.8 compatibility fixes.